# CEPEPEH

./: CMakeLists.txt  camera_app  camera_app.cpp  cameraapp.deb
cameraapp/DEBIAN/: control
